k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: __APPLICATION_KEY__-__CI_ENVIRONMENT_SLUG__
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: __APPLICATION_KEY__-__CI_ENVIRONMENT_SLUG__
